docs: add local quick start for the IoT scenario (docker compose, v3 tables)